[gd_scene load_steps=3 format=3 uid="uid://dgwkawcoa12gc"]

[ext_resource type="Script" path="res://Script/game_over_menu.gd" id="1_0to2w"]
[ext_resource type="Texture2D" uid="uid://c3gswuejvs12n" path="res://assets/dark-gray-color-solid-background-1920x1080.png" id="1_2n7yi"]

[node name="GameOverMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0to2w")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.623529, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2n7yi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -204.0
offset_right = 87.0
offset_bottom = -111.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
pivot_offset = Vector2(87, 0)

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="score" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="scoreText" type="Label" parent="VBoxContainer/score"]
layout_mode = 2
text = "Score: "

[node name="pointText" type="Label" parent="VBoxContainer/score"]
layout_mode = 2
text = "point"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Return to main menu"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
